--- a/_body.scss
+++ b/_body.scss
@@ -1,4 +1,4 @@
- .maxwidth {
+.maxwidth {
     max-width: 1170px;
     margin: auto;
 }
@@ -99,8 +99,7 @@ body {
 
             .PetLivers-content {
                 background-color: #000000;
-
-
+                padding: 98.01px 0 94.2px;
 
 
 
@@ -116,13 +115,13 @@ body {
                     width: 24.184256%;
 
                     background: #FFFFFF;
-                    margin-right: 0.877%;
+                    margin-right: 1.265823%;
                     margin-bottom: 21.93px;
 
                     img {
                         // width: 18.5%;
                         width: 96.85863874%;
-                        margin: 0 auto;
+                        margin: 25px 1.570681% 0;
                         // margin: 20px 0.2945% 26.74px 0.2945%;
                     }
 
@@ -300,12 +299,12 @@ body {
         }
 
         .sponser-img1 {
-            width: 70.5%;
+            width: 89.240506%;
             margin-bottom: 83px;
         }
 
         .sponser-img2 {
-            width: 29%;
+            width: 36.708861%;
             margin-bottom: 11px;
         }
 
