--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,10 +1,12 @@
 header .headerlist {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
+  width: 70.845%;
+  margin-left: 27.65%;
+  margin-right: 1.505%;
 }
 header .headerlist li {
   font-size: 22px;
-  padding-right: 3.6235%;
   padding-top: 27px;
 }
 
@@ -78,6 +80,7 @@ body main .PetLivers .petlivers-title {
 }
 body main .PetLivers .PetLivers-content {
   background-color: #000000;
+  padding: 98.01px 0 94.2px;
 }
 body main .PetLivers .PetLivers-content .petliverswrap1,
 body main .PetLivers .PetLivers-content .petliverswrap2 {
@@ -89,12 +92,12 @@ body main .PetLivers .PetLivers-content .petliverswrap2 {
 body main .PetLivers .PetLivers-content .PetLivers-box {
   width: 24.184256%;
   background: #FFFFFF;
-  margin-right: 0.877%;
+  margin-right: 1.265823%;
   margin-bottom: 21.93px;
 }
 body main .PetLivers .PetLivers-content .PetLivers-box img {
   width: 96.85863874%;
-  margin: 0 auto;
+  margin: 25px 1.570681% 0;
 }
 body main .PetLivers .PetLivers-content .PetLivers-box p {
   margin-left: 7.73560209%;
@@ -207,11 +210,11 @@ body .Sponser .Sponser-title {
   margin-bottom: 46px;
 }
 body .Sponser .sponser-img1 {
-  width: 70.5%;
+  width: 89.240506%;
   margin-bottom: 83px;
 }
 body .Sponser .sponser-img2 {
-  width: 29%;
+  width: 36.708861%;
   margin-bottom: 11px;
 }
 body .Sponser .sponserText {
@@ -239,23 +242,41 @@ body .Sponser .sponserText {
 }
 #service .boxs .box {
   border: solid 3.42px #9067E9;
-  width: 24.991%;
-  margin-right: 1.7215%;
+  width: 31.634177%;
+  margin-right: 2.179114%;
   box-shadow: 12.435px 17.875px #9067E9;
   display: flex;
   flex-direction: column;
 }
+#service .boxs .box .margin1 {
+  margin-top: 24px;
+}
+#service .boxs .box .margin2 {
+  margin-top: 69px;
+}
+#service .boxs .box .margin3 {
+  margin-top: 96px;
+}
 #service .boxs::after {
   content: "";
 }
-#service .boxs .imgbox {
+#service .boxs .imgbox .flex {
+  display: flex;
+  flex-direction: column;
+  padding-left: 8.236965%;
+}
+#service .boxs .imgbox .flex h3 {
+  flex-basis: 0;
+  flex-grow: 1;
+}
+#service .boxs .imgbox .flex p {
   flex-basis: 0;
   flex-grow: 1;
 }
 #service .boxs img {
   width: 32.769797%;
   padding-top: 5.587478%;
-  padding-left: 10.603817%;
+  padding-left: 8.236965%;
 }
 
 #voice h2 {
@@ -270,10 +291,11 @@ body .Sponser .sponserText {
   flex-basis: 0;
   flex-grow: 1;
   text-align: end;
+  width: 40.443038%;
+  margin-right: 4.367089%;
 }
 #voice .v-container .voiceright img {
-  width: 63.9%;
-  margin-right: 6.5%;
+  width: 100%;
   box-shadow: -27.75px 16.5px #e7afc3;
 }
 #voice .v-container .voiceleft {
@@ -286,16 +308,16 @@ body .Sponser .sponserText {
 #voice .v-container .text1 {
   font-size: 16px;
   margin-bottom: 25px;
-  margin-left: 6.5%;
+  margin-left: 4.367089%;
 }
 #voice .v-container .text2 {
   font-size: 21px;
   margin-bottom: 27px;
-  margin-left: 6.5%;
+  margin-left: 4.367089%;
 }
 #voice .v-container .text3 {
   font-size: 18px;
-  margin-left: 6.5%;
+  margin-left: 4.367089%;
 }
 #voice .v-container .back {
   z-index: 1;
@@ -340,20 +362,20 @@ body .Sponser .sponserText {
 }
 #contact .c-container .forclient {
   border-right: solid 1px black;
+  width: 40.063291%;
 }
 #contact .c-container .forclient h2 {
   display: inline-block;
   padding: 0 2.11%;
-  margin: 100px 0 40px 31%;
+  margin: 100px 0 40px 0;
   background: linear-gradient(transparent 70%, #FFEA02 70%);
 }
 #contact .c-container .forclient p {
   font-size: 18px;
   margin-bottom: 44px;
-  padding: 0 0 0 31%;
 }
 #contact .c-container .forclient form {
-  padding: 0 0 0 31%;
+  width: 100%;
 }
 #contact .c-container .forclient form .font {
   font-size: 18px;
@@ -366,7 +388,7 @@ body .Sponser .sponserText {
 #contact .c-container .forclient form .font .area {
   border: solid 1px;
   margin-bottom: 25px;
-  margin-right: 8.8%;
+  margin-right: 5.56962%;
 }
 #contact .c-container .forclient form .font textarea {
   height: 332px;
@@ -374,7 +396,7 @@ body .Sponser .sponserText {
 #contact .c-container .forclient form #btn {
   display: flex;
   justify-content: center;
-  margin-right: 8.8%;
+  margin-right: 5.56962%;
   background-color: black;
 }
 #contact .c-container .forclient form #btn .btn {
@@ -385,24 +407,31 @@ body .Sponser .sponserText {
 }
 #contact .c-container .forliver h2 {
   text-align: left;
-  margin-left: 6.3%;
+  margin-left: 10.2165%;
   display: inline-block;
   padding: 0 2.11%;
   background: linear-gradient(transparent 70%, #20C55A 70%);
 }
 #contact .c-container .forliver p {
-  margin-left: 6.3%;
+  margin-left: 10.253165%;
 }
 #contact .c-container .forliver .whatsapp {
-  margin-left: 6.3%;
+  margin-left: 10.253165%;
   margin-top: 200px;
   align-items: center;
 }
 #contact .c-container .forliver .whatsapp .img1 {
-  width: 12.515778%;
+  width: 14.559494%;
+}
+#contact .c-container .forliver .whatsapp .img1 img {
+  width: 100%;
 }
 #contact .c-container .forliver .whatsapp .img2 {
-  width: 68.1175519%;
+  width: 79.240506%;
+  margin-left: -3.456835%;
+}
+#contact .c-container .forliver .whatsapp .img2 img {
+  width: 100%;
 }
 
 #company h2 {
@@ -431,6 +460,10 @@ body .Sponser .sponserText {
 #company .company .map {
   flex-basis: 0;
   flex-grow: 1;
+  width: 99.620253%;
+}
+#company .company .map iframe {
+  width: 100%;
 }
 
 footer {
@@ -440,4 +473,14 @@ footer {
   color: white;
   font-size: 12px;
   padding: 24px 0;
+}
+
+@media screen and (max-width: 767px) {
+  header .headerlist {
+    font-size: 16px;
+  }
+  header .headerlist li {
+    font-size: 16px;
+    display: none;
+  }
 }/*# sourceMappingURL=main.css.map */
