--- a/_body.scss
+++ b/_body.scss
@@ -21,6 +21,23 @@ h2 {
     text-align: center;
 }
 
+// 追加
+.animation {
+
+    opacity: 0;
+    visibility: hidden;
+    transition: 1.5s;
+    transform: translateY(200px);
+
+}
+
+.active {
+    opacity: 1;
+    visibility: visible;
+    transform: translateY(0);
+}
+
+//   追加ここまで
 
 
 body {
@@ -182,11 +199,11 @@ body {
 
 
         // Aboutここから
-       
-       
+
+
         .About {
 
-          
+
 
             .about-content {
                 position: relative;
