--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -30,6 +30,19 @@ h2 {
   text-align: center;
 }
 
+.animation {
+  opacity: 0;
+  visibility: hidden;
+  transition: 1.5s;
+  transform: translateY(200px);
+}
+
+.active {
+  opacity: 1;
+  visibility: visible;
+  transform: translateY(0);
+}
+
 body .kv {
   position: relative;
 }
