--- a/_header.scss
+++ b/_header.scss
@@ -1,4 +1,8 @@
+$sp: 767px;
+
+
 header {
+
     .headerlist {
         display: flex;
         justify-content: space-between;
@@ -10,5 +14,112 @@ header {
             font-size: 22px;
             padding-top: 27px;
         }
+
+        @media screen and (max-width:$sp) {
+            display: none;
+        }
     }
+}
+
+
+// ここからハンバーガーメニュー
+.menu-btn {
+    position: fixed;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    top: 10px;
+    right: 10px;
+    height: 60px;
+    width: 60px;
+    background-color: #3584bb;
+    z-index: 90;
+
+    display: none;
+
+    @media screen and (max-width: $sp) {
+        display: block;
+    }
+
+}
+
+.menu-btn span,
+.menu-btn span:before,
+.menu-btn span:after {
+    content: '';
+    display: block;
+    height: 3px;
+    width: 25px;
+    border-radius: 3px;
+    background-color: #ffffff;
+    position: absolute;
+}
+
+.menu-btn span:before {
+    bottom: 8px;
+}
+
+.menu-btn span:after {
+    top: 8px;
+}
+
+#menu-btn-check:checked~.menu-btn span {
+    background-color: rgba(255, 255, 255, 0);
+}
+
+#menu-btn-check:checked~.menu-btn span::before {
+    bottom: 0;
+    transform: rotate(45deg);
+}
+
+#menu-btn-check:checked~.menu-btn span::after {
+    top: 0;
+    transform: rotate(-45deg);
+}
+
+#menu-btn-check {
+    display: none;
+}
+
+/* メニュー */
+.menu-content {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    right: -100%;
+    z-index: 80;
+    transition-property: right;
+    transition-duration: 0.5s;
+    transition-timing-function: ease;
+
+    display: none;
+
+    @media screen and (max-width: $sp) {
+        display: block;
+    }
+}
+
+.menu-content ul {
+    padding: 70px 10px 0;
+}
+
+.menu-content li {
+    text-align: center;
+}
+
+.menu-content ul li a {
+    display: block;
+    width: 100%;
+    font-size: 15px;
+    box-sizing: border-box;
+    color: #ffffff;
+    text-decoration: none;
+    padding: 9px 15px 10px 0;
+    position: relative;
+}
+
+#menu-btn-check:checked~.menu-content {
+    right: 0;
+    /*メニューを画面内へ*/
 }
